# BroBand

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.txt
.github/workflows/: CI.yml  CI_detecting.yml
database/: CMakeLists.txt  README.md  main.cpp
database/src/: CMakeLists.txt  Exceptions.h  connection.h  db_implementation.cpp  db_implementation.h  db_interface.h  structs.h
database/tests/: db_config.cfg  query.sql  tests.cpp
detecting/: CMakeLists.txt
detecting/.github/workflows/: CI.yml
detecting/include/: Exception.h  detecting.h
detecting/model/:  lng_trace_dlm2cpp.py  trace_dlm2cpp.py
detecting/src/: CMakeLists.txt  detecting.cpp  get_word2vec.py  main.cpp
detecting/test/: CMakeLists.txt  test.cpp
include/: detecting.h
server/: CMakeLists.txt  README.md  main.cpp
server/docs/: REST.txt
server/src/: CMakeLists.txt  Connection.cpp  Connection.h  Exceptions.h  Handlers.cpp  Handlers.h  IConnection.h  IServer.h  Router.h  Server.cpp  Server.h
server/test/: CMakeLists.txt  test.cpp
server/tests/: test.cpp
src/: CMakeLists.txt  Chat.cpp  Chat.h  Client.cpp  Client.h  Commands.cpp  Commands.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.cpp  Message.h  Structs.h  User.cpp  User.h  handlers.cpp  handlers.h  main.cpp  res.qrc
test/: mainTest.cpp  test.cpp
